--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 </head>
 
 <body>
-  <nav class="menu">
+  <nav class="menu js-menu">
     <ul>
       <li><a href="#animais">Animais</a></li>
       <li><a href="#faq">Faq</a></li>
       <li><a href="#contato">Contato</a></li>
-      <li><a href="#">Dev →</a></li>
+      <li><a href="#dev">Dev →</a></li>
     </ul>
   </nav>
   <section class="grid-section animais" id="animais">
